tests/ui/enum/enum-discriminant-missing-variant.stderr
error[E0599]: no variant, associated function, or constant named `A` found for enum `SomeEnum` in the current scope
  --> $DIR/enum-discriminant-missing-variant.rs:3:19
   |
LL | pub enum SomeEnum {
   | ----------------- variant, associated function, or constant `A` not found for this enum
LL |     B = SomeEnum::A,
   |                   ^ variant, associated function, or constant not found in `SomeEnum`
   |
help: there is a variant with a similar name
   |
LL -     B = SomeEnum::A,
LL +     B = SomeEnum::B,
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
